# Air

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs  compat.h  core.h  defs.h  rustfmt.toml  version.c  version.h.in
.github/workflows/: ci.yml  tests.yml
adt/: avl_tree.h  circular_buffer.h  circular_queue.h
air-crypto/: .clangd  Cargo.toml  build.rs
air-crypto/include/: mic.h  pbkdf2_sha1.h  wep.h
air-crypto/native/: mic.c  pbkdf2_sha1.c  wep.c
air-crypto/src/: ffi.rs  lib.rs
air-tui/: Cargo.toml
air-tui/src/: lib.rs  logo.rs  renderer.rs  theme.rs
air-tui/src/widgets/: ap_table.rs  crack_panel.rs  log_panel.rs  mod.rs  (+3 more)
ce-wep/: crypto_engine.h  uniqueiv.c  uniqueiv.h
ce-wpa/: aligned.h  arch.h  crypto_engine.c  jcommon.h  johnswap.h  memory.c  misc.h  simd-intrinsics.c  simd_flags.h  wpapsk.c  wpapsk.h
cowpatty/: cowpatty.h
cpu/: cpuset.h  simd_cpuid.h  trampoline.h
crypto/: aes-128-cbc-gcrypt.c  aes-128-cbc-generic.c  aes-128-cbc-openssl.c  aes.h  arcfour-gcrypt.c  arcfour-generic.c  arcfour-openssl.c  arcfour.h  crypto.c  crypto.h  hkdf.c  hkdf.h  mac-hmac-md5-generic.c  mac-hmac-sha1-generic.c  mac-hmac-sha256-generic.c  mac-omac1-gcrypt.c  mac-omac1-generic.c  mac-omac1-openssl.c  mac.h  md5-gcrypt.c  md5-generic.c  md5-openssl.c  md5.c  md5.h  pmkid.c  pmkid.h  sha1-gcrypt.c  sha1-generic.c  sha1-git.c  sha1-openssl.c  sha1.c  sha1.h  sha256-gcrypt.c  sha256-openssl.c  sha256.c  sha256.h
docs/: PROGRESS.md
libac/adt/: avl_tree.c  avl_tree.h  circular_buffer.c  circular_queue.c
libac/cpu/: cpuset_hwloc.c  cpuset_pthread.c  simd_cpuid.c  trampoline_arm.c  trampoline_ppc.c  trampoline_stubs.c  trampoline_x86.c
libac/support/: common.c  communications.c  crypto_engine_loader.c  fragments.c  mcs_index_rates.c
libac/tui/: console.c
libac/utf8/: verifyssid.c
osdep/: Makefile.inc  air_airpcap.h  airpcap.c  byteorder.h  channel.h  common.c  common.h  crctable_osdep.h  cygwin.c  cygwin.h  cygwin_tap.c  darwin.c  darwin_tap.c  dummy.c  dummy_tap.c  file.c  freebsd.c  freebsd_tap.c  linux.c  linux_tap.c  netbsd.c  netbsd_tap.c  network.c  network.h  openbsd.c  openbsd_tap.c  osdep.c  osdep.h  packed.h
osdep/tap-win32/: common.h
pcre/: compat-pcre.h
ptw/: air-ptw-lib.c  air-ptw-lib.h
scripts/: .desktop  vendors.csv
src/: cpu.rs  defs.rs  engine.rs  globals.rs  lib.rs  main.rs  memory.rs  types.rs  wordlist.rs
src/backend/: app.rs  capture.rs  deauth.rs  inject.rs  interface.rs  mod.rs  scan.rs  settings.rs  vendors.rs
src/connections/: app.rs  deauth.rs  decrypt.rs  interfaces.rs  mod.rs  scan.rs  settings.rs
src/interfaces/: app.rs  deauth.rs  decrypt.rs  interfaces.rs  mod.rs  settings.rs
src/tui/: mod.rs
src/widgets/: dialog.rs  icon_buttons.rs  mod.rs
support/: common.h  communications.h  crypto_engine_loader.h  fragments.h  ieee80211_compat.h  local_limits.h  mcs_index_rates.h  pcap_local.h  station.h
tui/: console.h
utf8/: verifyssid.h
