[package]
name = "air-crypto"
version = "0.1.0"
edition = "2024"
description = "C23 cryptographic core with an async Rust front (WPA PMK / PBKDF2-HMAC-SHA1)."

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
rayon = "1"
thiserror = "2"

[build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
